@@ -16,11 +16,13 @@ static const size_t TEST_SHA1_DIGEST_LENGTH = 20;
 
 
 // keytype_from_text()
-void test_MD5KeyTypeWithoutDigestLength(void) {
+void
+test_MD5KeyTypeWithoutDigestLength(void) {
 	TEST_ASSERT_EQUAL(KEY_TYPE_MD5, keytype_from_text("MD5", NULL));
 }
 
-void test_MD5KeyTypeWithDigestLength(void) {
+void
+test_MD5KeyTypeWithDigestLength(void) {
 	size_t digestLength;
 	size_t expected = TEST_MD5_DIGEST_LENGTH;
 
@@ -29,7 +31,8 @@ void test_MD5KeyTypeWithDigestLength(void) {
 }
 
 
-void test_SHA1KeyTypeWithDigestLength(void) {
+void
+test_SHA1KeyTypeWithDigestLength(void) {
 #ifdef OPENSSL
 	size_t digestLength;
 	size_t expected = TEST_SHA1_DIGEST_LENGTH;
@@ -44,15 +47,17 @@ void test_SHA1KeyTypeWithDigestLength(void) {
 
 
 // keytype_name()
-void test_MD5KeyName(void) {
+void
+test_MD5KeyName(void) {
 	TEST_ASSERT_EQUAL_STRING("MD5", keytype_name(KEY_TYPE_MD5));
 }
 
-void test_SHA1KeyName(void) {
+
+void
+test_SHA1KeyName(void) {
 #ifdef OPENSSL
 	TEST_ASSERT_EQUAL_STRING("SHA", keytype_name(NID_sha));
 #else
 	TEST_IGNORE_MESSAGE("Skipping because OPENSSL isn't defined");
 #endif	/* OPENSSL */
 }
-
