@@ -1,7 +1,6 @@
 #include "config.h"
 
 #include "ntp_stdlib.h"
-#include "ntp_calendar.h"
 #include "ntp_fp.h"
 
 #include "unity.h"
